Fix too long lines

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -133,7 +133,21 @@ main {
     padding: 5px 50px 5px 50px;
 }
 
-#date, #speed, #book-confirm, #confirm-message, #change-date, #change-type, #cancel, #edit-book-confirm, #edit-date-form, #edit-lesson-type, #cancel-lesson, #signup, #signin, #signout-confirm, #reset {
+#date,
+#speed,
+#book-confirm,
+#confirm-message,
+#change-date,
+#change-type,
+#cancel,
+#edit-book-confirm,
+#edit-date-form,
+#edit-lesson-type,
+#cancel-lesson,
+#signup,
+#signin,
+#signout-confirm,
+#reset {
     background-color: #FCF8FF;
     border-radius: 3px;
 }
@@ -159,7 +173,12 @@ main {
     padding: 5px 50px 5px 50px;
 }
   
-#manage-bookings:hover, #manage:hover, #change-date:hover, #change-type:hover, #cancel:hover, #success-manage-bookings:hover {
+#manage-bookings:hover,
+#manage:hover,
+#change-date:hover,
+#change-type:hover,
+#cancel:hover,
+#success-manage-bookings:hover {
     background-color: #1c1b1a;
 }
 
@@ -202,7 +221,14 @@ main {
     width: 200px;
 }
 
-#back-to-selection, #confirm, #edit-date-confirm, #edit-date-back-to-selection, #edit-lesson-type-confirm, #edit-lesson-type-back-to-selection, #cancel-lesson-confirm, #cancel-lesson-back-to-selection {
+#back-to-selection,
+#confirm,
+#edit-date-confirm,
+#edit-date-back-to-selection,
+#edit-lesson-type-confirm,
+#edit-lesson-type-back-to-selection,
+#cancel-lesson-confirm,
+#cancel-lesson-back-to-selection {
     margin-top: 20px;
     bottom: 0;
     height: 50px;
